cabal-version: 2.4

name: hmm
version: 0.1.0

build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Game
    Game.Config
    Game.Env
    Game.World
    Game.Level
    Game.Image
    Game.FPS
    Game.Animation
    Game.Data
    Game.Data.TiledMap
    Game.Data.Assets
  build-depends:
    text,
    apecs,
    apecs-gloss,
    base,
    gloss,
    gloss-juicy,
    linear,
    random,
    vector,
    aeson-tiled,
    co-log,
    text,
    mtl,
    lens,
    natural-transformation,

executable hmm
  build-depends:
    apecs,
    apecs-gloss,
    base,
    gloss,
    linear,
    random,
    vector,
    aeson-tiled,
    co-log,
    text,
    mtl,
    optparse-applicative,
    lens,
    natural-transformation,
    hmm
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -Wmissing-export-lists
    -Wpartial-fields
  default-language: Haskell2010
  hs-source-dirs: game
  main-is: Main.hs
  other-modules: CLI

executable game-server
  build-depends:
    base,
    game-network,
    mtl,
    transformers,
  ghc-options:
    -Wall
    -threaded
    -rtsopts
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs:
    game-server
