cabal-version: 2.4

name: hmm
version: 0.1.0
synopsis: Micro machines
description: Remake of the Micro Machines game in Haskell
category: Game

build-type: Simple

common shared
  build-depends:
    text,
    apecs,
    apecs-gloss,
    base,
    gloss,
    gloss-juicy,
    linear,
    random,
    vector,
    unordered-containers,
    aeson-tiled,
    co-log,
    filepath,
    directory,
    text,
    exceptions,
    transformers,
    mtl,
    lens,
    natural-transformation
  default-language: Haskell2010

library
  import: shared
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Game
    Game.Config
    Game.Env
    Game.World
    Game.Level
    Game.Image
    Game.Sound
    Game.FPS
    Game.Animation
    Game.TiledMap
    Game.Assets
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -Wmissing-export-lists
    -Wpartial-fields

executable hmm
  import: shared
  build-depends:
    optparse-applicative,
    hmm
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -Wmissing-export-lists
    -Wpartial-fields
  hs-source-dirs: game
  main-is: Main.hs
  other-modules:
    CLI

executable game-server
  build-depends:
    base,
    game-network,
    mtl,
    transformers,
  ghc-options:
    -Wall
    -threaded
    -rtsopts
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs:
    game-server

test-suite hmm-test
  import: shared
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -fhide-source-paths
    -Wmissing-export-lists
    -Wpartial-fields
    -Wmissing-home-modules
    -- delegate to tasty to discover tests
    -fno-warn-missing-export-lists
  type: exitcode-stdio-1.0
  build-depends:
    hmm,
    tasty,
    tasty-expected-failure,
    hedgehog,
    tasty-hedgehog,
    doctest
  build-tool-depends: tasty-discover:tasty-discover
  other-modules:
    Game.ExampleTest
  hs-source-dirs: test
  main-is: Driver.hs
